<?xml version="1.0"?>
<package format="2">

  <name>kalman_filter_examples</name>
  <version>1.0.0</version>
  <description>Includes examples of how to use the kalman_filter package.</description>
  <license>MIT</license>

  <author email="pcdangio@gmail.com">Paul D'Angio</author>
  <maintainer email="pcdangio@gmail.com">Paul D'Angio</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>kalman_filter</depend>

</package>
